--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.8
+  dio: ^4.0.1
+  onboarding: ^2.1.0
+  bloc: ^7.2.1
+  flutter_bloc: ^7.3.1
+  smooth_page_indicator: ^1.0.0+2
+  fluttertoast: ^8.0.8
+  carousel_slider: ^4.0.0
+  firebase_core: ^1.8.0
+  firebase_auth: ^3.1.4
+  cloud_firestore: ^2.5.4
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +84,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Jannah
+      fonts:
+        - asset: assets/fonts/jannah.ttf
+          weight: 700
+    - family: IconBroken
+      fonts:
+        - asset: assets/fonts/icons.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
