--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,14 @@ dependencies:
   shared_preferences: ^2.0.8
   dio: ^4.0.1
   onboarding: ^2.1.0
+  hexcolor: ^2.0.3
   bloc: ^7.2.1
   flutter_bloc: ^7.3.1
   smooth_page_indicator: ^1.0.0+2
   fluttertoast: ^8.0.8
   carousel_slider: ^4.0.0
+
+  #firebase
   firebase_core: ^1.8.0
   firebase_auth: ^3.1.4
   cloud_firestore: ^2.5.4
